# just-use-dataclass

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml  tests.yaml  tests.yml
dict_to_dataclass/: converter.py
just_use_dataclass/: converter.py
tests/: test_errors.py  test_iterables.py  test_nested.py  test_simple.py  test_special.py
